[gd_scene load_steps=5 format=2]

[ext_resource path="res://touch_controls/buttons.gd" type="Script" id=1]
[ext_resource path="res://touch_controls/button.png" type="Texture" id=2]
[ext_resource path="res://touch_controls/hover_button.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "ingame_menu"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ingame_menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0189797, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 150 ), Vector2( 100, 150 ) ]
}

[node name="buttons" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="touch_buttons" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 112.78, 427.539 )
__meta__ = {
"_edit_group_": true
}

[node name="down" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 0, 70 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
action = "ui_down"
visibility_mode = 1

[node name="left" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( -70, 35 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
action = "ui_left"
visibility_mode = 1

[node name="shoot" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 731.169, 11.9428 )
scale = Vector2( 1.76177, 1.60596 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
action = "ui_accept"
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="touch_buttons"]
position = Vector2( 70, 35 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
action = "ui_right"
visibility_mode = 1

[node name="up" type="TouchScreenButton" parent="touch_buttons"]
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
action = "ui_up"
visibility_mode = 1

[node name="options" type="TextureButton" parent="."]
margin_left = 851.0
margin_top = 23.0
margin_right = 957.0
margin_bottom = 77.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="ingame_menu" type="Node2D" parent="."]
position = Vector2( -170.86, 150 )
__meta__ = {
"_edit_group_": true
}

[node name="exit" type="TextureButton" parent="ingame_menu"]
margin_top = 80.0
margin_right = 125.0
margin_bottom = 145.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ingame_menu/exit"]
margin_right = 64.0
margin_bottom = 64.0
text = "exit"
align = 1
valign = 1

[node name="resume" type="TextureButton" parent="ingame_menu"]
margin_right = 113.0
margin_bottom = 65.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ingame_menu/resume"]
margin_right = 64.0
margin_bottom = 64.0
text = "resume"
align = 1
valign = 1

[node name="anims" type="AnimationPlayer" parent="."]
anims/ingame_menu = SubResource( 1 )
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ingame_menu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ingame_menu/resume" to="." method="_on_resume_pressed"]
